Add index.html, grid test

--- a/less/style.less
+++ b/less/style.less
@@ -1,1 +1,13 @@
-@import "blocks/test.less";
+@import "blocks/animation.less";
+@import "blocks/body.less";
+@import "blocks/brand-logo.less";
+@import "blocks/blog-preview.less";
+@import "blocks/button.less";
+@import "blocks/call-to-action.less";
+@import "blocks/container.less";
+@import "blocks/row.less";
+@import "blocks/showcase.less";
+@import "blocks/intro.less";
+@import "blocks/infographics.less";
+@import "blocks/main.less";
+@import "blocks/footer.less";
