--- a/less/blocks/body.less
+++ b/less/blocks/body.less
@@ -1,7 +1,22 @@
-body {
-
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Black.ttf");
+  font-weight: normal;
 }
 
-* {
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Bold.ttf");
+  font-weight: bold;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", Arial, sans-serif;
+}
+
+/* * {
   outline: 1px solid black;
 }
+ */
