--- a/less/blocks/container.less
+++ b/less/blocks/container.less
@@ -1,10 +1,9 @@
 .container {
-  /* materialize class */
-}
-
-.container-wrapper {
   min-width: 320px;
   max-width: 1200px;
 
-  margin: auto;
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: auto;
+  margin-left: auto;
 }
