--- a/less/style.less
+++ b/less/style.less
@@ -7,6 +7,7 @@
 @import "blocks/container.less";
 @import "blocks/row.less";
 @import "blocks/showcase.less";
+@import "blocks/header.less";
 @import "blocks/intro.less";
 @import "blocks/infographics.less";
 @import "blocks/main.less";
