html markup index

--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,3 +1,35 @@
-footer {
-  /* materialize tag */
+.footer {
+
+}
+
+.footer__logo {
+
+}
+
+.footer__links {
+
+}
+
+.footer__copyright {
+
+}
+
+.footer__social {
+
+}
+
+.footer__social-title {
+
+}
+
+.footer__social-bar {
+
+}
+
+.social__icon {
+
+}
+
+.footer__payment {
+
 }
