--- a/less/blocks/infographics.less
+++ b/less/blocks/infographics.less
@@ -1,16 +1,44 @@
 .infographics {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
 .infographics__title {
-  text-align: center
+
 }
 
-.infographics__img {
-  display: block;
-  width: 100%;
-  height: auto;
+.infographics__item-title {
+  margin-bottom: 20px;
+}
+
+.infographics__item-content {
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.infographics__item-content li {
+  margin-bottom: 10px;
+}
+
+.infographics__item-content li:last-child {
+  margin-bottom: 0;
+}
+
+.infographics__item-one {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.infographics__item-two {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.infographics__item-three {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.infographics__item-icon {
+  font-size: 50px;
 }
