--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -1,7 +1,18 @@
-nav {
-  /* materialize tag */
+.navbar-default {
+  margin-bottom: 0;
+
+  background-color: #fff;
+  border: none;
 }
 
-.nav-wrapper {
-  /* materialize class */
+.navbar-default .navbar-toggle {
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.navbar-fixed-top {
+  position: fixed;
+
+  margin: 0 auto;
+  max-width: 1200px;
 }
