--- a/less/blocks/showcase.less
+++ b/less/blocks/showcase.less
@@ -3,5 +3,17 @@
 }
 
 .showcase__title {
+  text-align: center;
+}
+
+.showcase__item-one {
+
+}
+
+.showcase__item-two {
+
+}
+
+.showcase__item-three {
 
 }
