--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,4 @@
+@import "blocks/advice.less";
 @import "blocks/animation.less";
 @import "blocks/body.less";
 @import "blocks/brand-logo.less";
@@ -5,10 +6,12 @@
 @import "blocks/button.less";
 @import "blocks/call-to-action.less";
 @import "blocks/container.less";
-@import "blocks/row.less";
+@import "blocks/dividers.less";
+@import "blocks/promo-video.less";
 @import "blocks/showcase.less";
 @import "blocks/header.less";
-@import "blocks/intro.less";
 @import "blocks/infographics.less";
+@import "blocks/introduction.less";
 @import "blocks/main.less";
+@import "blocks/nav.less";
 @import "blocks/footer.less";
