--- a/less/blocks/body.less
+++ b/less/blocks/body.less
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: "Roboto";
   src: url("../fonts/Roboto-Black.ttf");
   font-weight: normal;
@@ -8,12 +8,24 @@
   font-family: "Roboto";
   src: url("../fonts/Roboto-Bold.ttf");
   font-weight: bold;
-}
+} */
 
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", Arial, sans-serif;
+  /* font-family: "Roboto", Arial, sans-serif; */
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #606060;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 24px;
 }
 
 /* * {
