--- a/less/blocks/container.less
+++ b/less/blocks/container.less
@@ -1,9 +1,18 @@
-.container {
+.main-container {
   min-width: 320px;
   max-width: 1200px;
 
-  padding-right: 0;
-  padding-left: 0;
   margin-right: auto;
   margin-left: auto;
+  padding-right: 0;
+  padding-left: 0;
+
+  box-sizing: border-box;
+  box-shadow:0px 0px 5px 0px rgba(0,0,0,0.5);
+}
+
+.container-article {
+  margin: 0 auto;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
