Markup index.html

--- a/less/blocks/showcase.less
+++ b/less/blocks/showcase.less
@@ -1,9 +1,16 @@
 .showcase {
-
+  text-align: center;
 }
 
 .showcase__title {
+  margin-bottom: 20px;
   text-align: center;
+}
+
+.showcase__sub-title {
+  margin-bottom: 25px;
+  text-align: center;
+  color: #999;
 }
 
 .showcase__item-one {
@@ -16,4 +23,32 @@
 
 .showcase__item-three {
 
+}
+
+.showcase__item-thumbnail {
+  background-color: aliceblue;
+}
+
+.showcase__item-thumbnail img {
+  display: block;
+  width: 100%;
+}
+
+.showcase__item-footer {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.showcase__item-details {
+
+}
+
+.showcase__item-title {
+
+}
+
+.showcase__item-price {
+  display: block;
+
+  margin-top: 15px;
 }
