--- a/less/style.less
+++ b/less/style.less
@@ -4,6 +4,7 @@
 @import "blocks/brand-logo.less";
 @import "blocks/blog-preview.less";
 @import "blocks/button.less";
+@import "blocks/card.less";
 @import "blocks/call-to-action.less";
 @import "blocks/container.less";
 @import "blocks/dividers.less";
