--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -17,15 +17,76 @@
   &:hover {
     color: #fff;
     background-color: #77cde3;
+    border-color: #77cde3;
   }
 
   &:focus {
     color: #fff;
     background-color: #77cde3;
+    border-color: #77cde3;
   }
 
   &:active {
     color: #fff !important;
-    background-color: #80bece !important;
+  }
+}
+
+.btn--form {
+  margin-top: 15px;
+
+  padding-top: 15px;
+  padding-right: 25px;
+  padding-bottom: 15px;
+  padding-left: 25px;
+
+  background-color: transparent;
+  color: #77cde3;
+  border-color: #77cde3;
+  border-radius: 24px;
+
+  &:hover {
+    color: #fff;
+    background-color: #77cde3;
+    border-color: #77cde3;
+  }
+
+  &:focus {
+    color: #fff;
+    background-color: #77cde3;
+    border-color: #77cde3;
+  }
+
+  &:active {
+    color: #fff !important;
+  }
+}
+
+.btn--buy{
+  margin-top: 15px;
+
+  padding-top: 10px;
+  padding-right: 25px;
+  padding-bottom: 10px;
+  padding-left: 25px;
+
+  background-color: transparent;
+  color: #77cde3;
+  border-color: #77cde3;
+  border-radius: 24px;
+
+  &:hover {
+    color: #fff;
+    background-color: #77cde3;
+    border-color: #77cde3;
+  }
+
+  &:focus {
+    color: #fff;
+    background-color: #77cde3;
+    border-color: #77cde3;
+  }
+
+  &:active {
+    color: #fff !important;
   }
 }
