--- a/less/blocks/promo-video.less
+++ b/less/blocks/promo-video.less
@@ -2,8 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  padding-bottom: 20px;
+
+  background-color: #f5f5f5;
 }
 
 .promo-video__title {
+  margin-bottom: 20px;
   text-align: center;
+}
+
+.promo__video {
+  text-align: center;
+  width: 100%;
 }
