index.html working

--- a/less/blocks/advice.less
+++ b/less/blocks/advice.less
@@ -16,3 +16,18 @@
 .advice__form {
 
 }
+
+@media (min-width: 768px) {
+
+  .advice {
+    display: flex;
+    flex-wrap: wrap;
+
+    align-items: baseline;
+  }
+
+  .advice .button-wrapper {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
