--- a/less/blocks/infographics.less
+++ b/less/blocks/infographics.less
@@ -42,3 +42,14 @@
 .infographics__item-icon {
   font-size: 50px;
 }
+
+@media (min-width: 768px) {
+
+  .infographics {
+    display: flex;
+    justify-content: space-around;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
