--- a/less/blocks/showcase.less
+++ b/less/blocks/showcase.less
@@ -52,3 +52,27 @@
 
   margin-top: 15px;
 }
+
+@media (min-width: 768px) {
+
+  .showcase .container-article {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .showcase__title {
+    width: 100%;
+  }
+
+  .showcase__sub-title {
+    width: 100%;
+  }
+
+  .showcase__item-one,
+  .showcase__item-two,
+  .showcase__item-three {
+    width: 30%;
+  }
+
+}
