--- a/less/blocks/card.less
+++ b/less/blocks/card.less
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
 
+  margin-bottom: 10px;
+
   padding-left: 20px;
   padding-right: 20px;
 
@@ -15,6 +17,7 @@
 }
 
 .card-image {
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
