shop.html markup

--- a/less/blocks/advice.less
+++ b/less/blocks/advice.less
@@ -1,8 +1,13 @@
 .advice {
   padding-right: 10px;
+  padding-bottom: 20px;
   padding-left: 10px;
 
   background-color: #f5f5f5;
+}
+
+.advice .container-article {
+  margin: 0;
 }
 
 .advice__title {
@@ -10,6 +15,7 @@
 }
 
 .advice__content {
+  color: #999;
   text-align: center;
 }
 
@@ -22,7 +28,7 @@
   .advice {
     display: flex;
     flex-wrap: wrap;
-
+    justify-content: space-around;
     align-items: baseline;
   }
 
