--- a/less/blocks/showcase.less
+++ b/less/blocks/showcase.less
@@ -26,7 +26,7 @@
 }
 
 .showcase__item-thumbnail {
-  background-color: aliceblue;
+  background-color: #f0f8ff;
 }
 
 .showcase__item-thumbnail img {
