--- a/less/style.less
+++ b/less/style.less
@@ -8,7 +8,9 @@
 @import "blocks/call-to-action.less";
 @import "blocks/container.less";
 @import "blocks/dividers.less";
+@import "blocks/feature.less";
 @import "blocks/promo-video.less";
+@import "blocks/shop-showcase.less";
 @import "blocks/showcase.less";
 @import "blocks/header.less";
 @import "blocks/infographics.less";
