--- a/less/blocks/animation.less
+++ b/less/blocks/animation.less
@@ -7,19 +7,32 @@
   to { opacity: 1; }
 }
 
+.animation-pulse {
+  animation: pulse 15s linear infinite;
+  transform-origin: 50% 50%;
+}
+
+@keyframes pulse {
+  0% {transform: scale(1.1)}
+  25% {transform: scale(0.8)}
+  50% {transform: scale(1.1)}
+  100% {transform: scale(1.1)}
+}
+
+.animation-rotation {
+  animation-name: rotation;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes rotation {
+  0% {transform: rotate (0deg);}
+  100% {transform: rotate (360deg);}
+}
+
 .hover:hover {
   transition: box-shadow .25s;
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.pulse {
-  animation: pulse_9880 15s linear infinite;
-  transform-origin: 50% 50%;
-}
-
-@keyframes pulse_9880 {
-  0% { transform: scale(1.1) }
-  25% { transform: scale(0.8) }
-  50% { transform: scale(1.1) }
-  100% { transform: scale(1.1) }
-}
