--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -13,6 +13,31 @@
   text-align: center;
 }
 
+.aquel-title {
+  font-size: 40px;
+  color: #77cde3;
+}
+
 .introduction__img {
 
+}
+
+.introduction--tehnology {
+  height: 40vh;
+  text-align: center;
+}
+
+.introduction--tehnology .introduction__title {
+  width: 315px;
+}
+
+.introduction--tehnology .aquel-title {
+  display: block;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  color: #77cde3;
+}
+
+.reading-time {
+  color: #999;
 }
