js animation fadein

--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -3,21 +3,25 @@
   text-align: center;
 }
 
-.btn--introduction {
+.btn--welcome-to-shop {
   padding-top: 15px;
   padding-right: 25px;
   padding-bottom: 15px;
   padding-left: 25px;
 
+  width: 200px;
+
   background-color: transparent;
   color: #77cde3;
   border-color: #77cde3;
-  border-radius: 24px;
+  border-radius: 15px;
+  transition: all .8s;
 
   &:hover {
     color: #fff;
     background-color: #77cde3;
     border-color: #77cde3;
+    transition: all .8s;
   }
 
   &:focus {
@@ -39,15 +43,19 @@
   padding-bottom: 15px;
   padding-left: 25px;
 
+  width: 200px;
+
   background-color: transparent;
   color: #77cde3;
   border-color: #77cde3;
-  border-radius: 24px;
+  border-radius: 15px;
+  transition: all .8s;
 
   &:hover {
     color: #fff;
     background-color: #77cde3;
     border-color: #77cde3;
+    transition: all .8s;
   }
 
   &:focus {
