--- a/less/blocks/showcase.less
+++ b/less/blocks/showcase.less
@@ -76,3 +76,55 @@
   }
 
 }
+
+
+
+/* Section product
+
+<div class="showcase">
+
+  <div class="container-article">
+
+    <h2 class="showcase__title">Фильтрующие системы</h2>
+    <p class="showcase__sub-title">Познакомьтесь с технологиями Aquel</p>
+
+    <div class="showcase__item-one">
+      <div class="showcase__item-thumbnail hover">
+        <img src="img/small-aquel-1000.png" width=""  height="" alt="">
+      </div>
+      <div class="showcase__item-footer">
+        <div class="showcase__item-details">
+          <h3 class="showcase__item-title">Aquel 1000</h>
+          <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
+        </div>
+        <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
+      </div>
+    </div>
+
+    <div class="showcase__item-two">
+      <div class="showcase__item-thumbnail hover">
+        <img src="img/small-aquel-zero.png" width="" height="" alt="">
+      </div>
+      <div class="showcase__item-footer">
+        <div class="showcase__item-details">
+          <h3 class="showcase__item-title">Aquel Zero</h>
+          <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
+        </div>
+        <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
+      </div>
+    </div>
+
+    <div class="showcase__item-three">
+      <div class="showcase__item-thumbnail hover">
+        <img src="img/small-aquel-200.png" width="" height="" alt="">
+      </div>
+      <div class="showcase__item-footer">
+        <div class="showcase__item-details">
+          <h3 class="showcase__item-title">Aquel 200</h>
+          <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
+        </div>
+        <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
+      </div>
+    </div>
+  </div>
+</div><!-- /.showcase --> */
