--- a/less/style.less
+++ b/less/style.less
@@ -21,3 +21,5 @@
 @import "blocks/shop-showcase.less";
 @import "blocks/showcase.less";
 @import "blocks/tehnology-review.less";
+@import "blocks/welcome-to-shop.less";
+@import "variables.less";
