--- a/less/blocks/animation.less
+++ b/less/blocks/animation.less
@@ -31,8 +31,23 @@
   100% {transform: rotate (360deg);}
 }
 
+
+
+
 .hover:hover {
   transition: box-shadow .25s;
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Required */
+.block-hidden{
+     opacity:0;
+}
+.block-visible{
+     opacity:1;
+}
+
+.fadein-post {
+  /* post checker */
 }
 
