--- a/less/blocks/blog-preview.less
+++ b/less/blocks/blog-preview.less
@@ -23,3 +23,64 @@
     width: 30%;
   }
 }
+
+
+/*  Section blog
+
+<div class="blog-preview">
+
+          <h2 class="blog-preview__title">Блог</h2>
+
+          <div class="blog-preview__item">
+            <div class="card hover">
+              <div class="card-image">
+                <img src="https://placehold.it/260x200">
+                <span class="card-title">Card Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="blog-preview__item">
+
+            <div class="card hover">
+              <div class="card-image">
+                <img src="https://placehold.it/260x200">
+                <span class="card-title">Card Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="blog-preview__item">
+
+            <div class="card hover">
+              <div class="card-image">
+                <img src="https://placehold.it/260x200">
+                <span class="card-title">Card Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </div>
+
+          </div>
+
+        </div><!-- /.blog-preview --> */
