--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -2,19 +2,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  height: 70vh;
+  justify-content: center;
+  height: 80vh;
 
   background-color: #f5f5f5;
 }
 
 .introduction__title {
   max-width: 415px;
+
+  margin-bottom: 8%;
+
   text-align: center;
 }
 
 .aquel-title {
-  font-size: 40px;
+  font-size: 70px;
   color: #77cde3;
 }
 
@@ -23,17 +26,17 @@
 }
 
 .introduction--tehnology {
-  height: 40vh;
+  height: 50vh;
   text-align: center;
 }
 
 .introduction--tehnology .introduction__title {
   width: 315px;
+  margin-bottom: 10%;
 }
 
 .introduction--tehnology .aquel-title {
   display: block;
-  margin-top: 25px;
   margin-bottom: 25px;
   color: #77cde3;
 }
