--- a/less/blocks/promo-video.less
+++ b/less/blocks/promo-video.less
@@ -3,9 +3,10 @@
   flex-direction: column;
   align-items: center;
 
+  padding-top: 45px;
   padding-bottom: 20px;
 
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .promo-video__title {
