--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -12,26 +12,31 @@
   width: 200px;
 
   background-color: transparent;
-  color: #77cde3;
-  border-color: #77cde3;
+  color: @style-color;
+  border-color: @style-color;
   border-radius: 15px;
-  transition: all .8s;
+  transition: all 0.8s;
+
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+              0 2px 10px 0 rgba(0, 0, 0, 0.12);
 
   &:hover {
     color: #fff;
-    background-color: #77cde3;
-    border-color: #77cde3;
-    transition: all .8s;
+    background-color: @style-color;
+    border-color: @style-color;
+    transition: all 0.8s;
   }
 
   &:focus {
     color: #fff;
-    background-color: #77cde3;
-    border-color: #77cde3;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 
   &:active {
     color: #fff !important;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 }
 
@@ -46,26 +51,31 @@
   width: 200px;
 
   background-color: transparent;
-  color: #77cde3;
-  border-color: #77cde3;
+  color: @style-color;
+  border-color: @style-color;
   border-radius: 15px;
-  transition: all .8s;
+  transition: all 0.8s;
+
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+              0 2px 10px 0 rgba(0, 0, 0, 0.12);
 
   &:hover {
     color: #fff;
-    background-color: #77cde3;
-    border-color: #77cde3;
-    transition: all .8s;
+    background-color: @style-color;
+    border-color: @style-color;
+    transition: all 0.8s;
   }
 
   &:focus {
     color: #fff;
-    background-color: #77cde3;
-    border-color: #77cde3;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 
   &:active {
     color: #fff !important;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 }
 
@@ -78,23 +88,25 @@
   padding-left: 25px;
 
   background-color: transparent;
-  color: #77cde3;
-  border-color: #77cde3;
+  color: @style-color;
+  border-color: @style-color;
   border-radius: 24px;
 
   &:hover {
     color: #fff;
-    background-color: #77cde3;
-    border-color: #77cde3;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 
   &:focus {
     color: #fff;
-    background-color: #77cde3;
-    border-color: #77cde3;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 
   &:active {
     color: #fff !important;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 }
