--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -40,7 +40,7 @@
 
 .feature-item__icon {
   font-size: 40px;
-  color: #00ced1;
+  color: @style-color;
 
   transform: scale(1);
   transition: all 0.4s;
