--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -63,12 +63,12 @@
   display: inline-block;
   vertical-align: middle;
   text-decoration: none;
-  fill: #77cde3;
+  fill: @style-color;
 }
 
 .social__icon:hover,
 .social__icon:active {
-  fill: #36b8d9;
+  fill: @style-color-darken;
   text-decoration: none;
 }
 
