--- a/less/blocks/animation.less
+++ b/less/blocks/animation.less
@@ -1,5 +1,5 @@
  .animation-fadeIn {
-  animation: fadeIn 5s;
+  animation: fadeIn 6s;
 }
 
 @keyframes fadeIn {
@@ -40,11 +40,17 @@
 }
 
 /* Required */
+
 .block-hidden{
      opacity:0;
 }
 .block-visible{
      opacity:1;
+}
+
+.block-shadows {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+              0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .fadein-post {
