--- a/less/blocks/infobar.less
+++ b/less/blocks/infobar.less
@@ -10,14 +10,26 @@
 }
 
 .infobar__list-item {
+  margin-bottom: 20px;
   padding: 20px;
 
   font-size: 16px;
   background-color: #f5f5f5;
 
-  transition: all 0.4s;
+  transition: all 0.5s;
 
   overflow: hidden;
+
+  &:hover {
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+                0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    transition: all 0.5s;
+  }
+}
+
+.infobar__list-item:last-child {
+  margin-bottom: 0;
 }
 
 .infobar__list-item:nth-of-type(2) {
@@ -26,7 +38,7 @@
 
 .infobar__list-item:hover {
   font-size: 18px;
-  transition: all 0.4s;
+  transition: all 0.5s;
 }
 
 .infobar__list-item:hover:nth-of-type(2) {
@@ -46,6 +58,7 @@
   }
 
   .infobar__list-item {
+    margin-bottom: 0;
     width: 32%;
   }
 }
