--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 80vh;
+  height: 90vh;
 
   background-color: #f5f5f5;
 }
@@ -16,13 +16,13 @@
   text-align: center;
 }
 
-.aquel-title {
+.introduction__aquel-title {
   font-size: 70px;
-  color: #77cde3;
+  color: @style-color;
 }
 
 .introduction__img {
-
+  max-width: 100%;
 }
 
 .introduction--tehnology {
@@ -35,10 +35,9 @@
   margin-bottom: 10%;
 }
 
-.introduction--tehnology .aquel-title {
+.introduction--tehnology .introduction__aquel-title {
   display: block;
   margin-bottom: 25px;
-  color: #77cde3;
 }
 
 .reading-time {
