--- a/less/blocks/shop-showcase.less
+++ b/less/blocks/shop-showcase.less
@@ -13,17 +13,27 @@
 
   overflow: hidden;
   background-color: #f0f8ff;
+
+  transition: all 0.5s;
 }
 
 .shop-showcase .container-article .shop-showcase__thumb {
   transform: scale(1);
-  transition: all 0.4s;
+  transition: all 0.5s;
 }
 
 .shop-showcase .container-article:hover .shop-showcase__thumb {
   transform: scale(1.1);
-  transition: all 0.4s;
+  transition: all 0.5s;
 }
+
+.shop-showcase .container-article:hover {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+              0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  transition: all 0.5s;
+}
+
+
 
 .shop-showcase__desc {
 
