Single product start

--- a/less/blocks/shop-showcase.less
+++ b/less/blocks/shop-showcase.less
@@ -33,10 +33,9 @@
   transition: all 0.5s;
 }
 
-
-
 .shop-showcase__desc {
-
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .shop-showcase__title {
