--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 90vh;
+  max-height: 1000px;
 
   background-color: #f5f5f5;
 }
@@ -42,4 +43,9 @@
 
 .reading-time {
   color: #999;
+}
+
+.introduction--about-us {
+  height: 50vh;
+  text-align: center;
 }
