--- a/less/blocks/tehnology-review.less
+++ b/less/blocks/tehnology-review.less
@@ -29,7 +29,7 @@
   outline: 1px solid @style-color;
 
   border-color: @style-color;
-  background-color: #f5f5f5;
+  background-color: #f0f8ff;
   font-weight: bold;
   font-style: italic;
 }
