--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,4 @@
+@import "blocks/advantages.less";
 @import "blocks/advice.less";
 @import "blocks/animation.less";
 @import "blocks/blog-preview.less";
@@ -20,6 +21,7 @@
 @import "blocks/promo-video.less";
 @import "blocks/shop-showcase.less";
 @import "blocks/showcase.less";
+@import "blocks/single-product.less";
 @import "blocks/tehnology-review.less";
 @import "blocks/welcome-to-shop.less";
 @import "variables.less";
