--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -580,6 +580,7 @@ a:active {
 .footer__payment-partner img {
   width: 200px;
   height: auto;
+  margin: 0 auto;
 }
 @media (min-width: 768px) {
   .footer .container-article {
@@ -699,7 +700,7 @@ a:active {
       justify-content: center;
   height: 90vh;
   max-height: 1000px;
-  background-color: #f5f5f5;
+  background-color: #e9f7f8;
 }
 .introduction__title {
   max-width: 415px;
