--- a/less/blocks/welcome-to-shop.less
+++ b/less/blocks/welcome-to-shop.less
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 80%;
   height: 90vh;
   max-height: 1000px;
 
@@ -11,8 +10,7 @@
   margin-top: 20px;
   margin-bottom: 20px;
 
-  border-top: 2px solid #f5f5f5;
-  border-bottom: 2px solid #f5f5f5;
+  background-color: #f5fdf1;
 }
 
 .welcome-to-shop__title {
