--- a/less/blocks/advice.less
+++ b/less/blocks/advice.less
@@ -4,7 +4,7 @@
   padding-bottom: 20px;
   padding-left: 10px;
 
-  background-color: #f5f5f5;
+  background-color: #fff1de;
 }
 
 .advice .container-article {
