--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,7 @@
 @style-color: #1eb1fc;
 @style-color-darken: darken(@style-color, 10%);
 @style-color-lighten: lighten(@style-color, 10%);
+
+@bg-color-aqua: #e9f7f8;
+/* @bg-color-cerrot
+@bg-color-aqua-light */
