--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -6,7 +6,7 @@
   height: 90vh;
   max-height: 1000px;
 
-  background-color: #e9f7f8;
+  background-color: @bg-color-aqua;
 }
 
 .introduction__title {
