--- a/less/blocks/shop-showcase.less
+++ b/less/blocks/shop-showcase.less
@@ -12,7 +12,7 @@
   margin-bottom: 20px;
 
   overflow: hidden;
-  background-color: #f0f8ff;
+  background-color: @bg-color-aqua;
 
   transition: all 0.5s;
 }
