--- a/less/blocks/infobar.less
+++ b/less/blocks/infobar.less
@@ -2,6 +2,10 @@
   padding-top: 25px;
 }
 
+.infobar a {
+  color: #777777;
+}
+
 .infobar__list {
   margin: 0;
   padding: 0;
@@ -32,17 +36,9 @@
   margin-bottom: 0;
 }
 
-.infobar__list-item:nth-of-type(2) {
-  font-size: 18px;
-}
-
 .infobar__list-item:hover {
   font-size: 18px;
   transition: all 0.5s;
-}
-
-.infobar__list-item:hover:nth-of-type(2) {
-  font-size: 20px;
 }
 
 .infobar__list-item a {
