--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,7 +3,7 @@
   padding-right: 10px;
   padding-bottom: 20px;
   padding-left: 10px;
-  background-color: #f5f5f5;
+  background-color: #fff1de;
 }
 .advice .container-article {
   margin: 0;
@@ -339,7 +339,6 @@ a:active {
   border-color: #1eb1fc;
 }
 .btn--buy {
-  margin-top: 15px;
   padding-top: 15px;
   padding-right: 25px;
   padding-bottom: 15px;
@@ -798,7 +797,7 @@ a:active {
 .shop-showcase .container-article {
   margin-bottom: 20px;
   overflow: hidden;
-  background-color: #f0f8ff;
+  background-color: #e9f7f8;
   transition: all 0.5s;
 }
 .shop-showcase .container-article .shop-showcase__thumb {
@@ -961,7 +960,8 @@ a:active {
       justify-content: center;
   height: 90vh;
   max-height: 1000px;
-  background-color: #f0f8ff;
+  background-color: #e9f7f8;
+  box-sizing: content-box;
 }
 .single-product__title {
   width: 100%;
@@ -974,22 +974,17 @@ a:active {
   text-align: center;
 }
 .single-product__img {
-  text-align: center;
-}
-.single-product__img img {
-  width: 320px;
+  width: 100%;
+  height: 40%;
+  background-image: url("../../img/small-aquel-1000.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
 }
 @media (min-width: 768px) {
   .single-product__img {
-    margin: 0;
-  }
-  .single-product__img img {
-    width: 450px;
-  }
-}
-@media (min-width: 1100px) {
-  .single-product__img img {
-    width: 550px;
+    width: 50%;
+    height: 50%;
   }
 }
 .tehnology-review .container-article {
@@ -1042,14 +1037,12 @@ a:active {
       justify-content: center;
   -ms-flex-align: center;
       align-items: center;
-  width: 80%;
   height: 90vh;
   max-height: 1000px;
   margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 20px;
-  border-top: 2px solid #f5f5f5;
-  border-bottom: 2px solid #f5f5f5;
+  background-color: #f5fdf1;
 }
 .welcome-to-shop__title {
   font-size: 40px;
@@ -1058,3 +1051,5 @@ a:active {
   font-size: 20px;
   margin-bottom: 7%;
 }
+/* @bg-color-cerrot
+@bg-color-aqua-light */
