--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -99,6 +99,16 @@
   margin: 0 auto;
 }
 
+.footer__social a,
+.footer__links a,
+.footer__payment a {
+  color: #666;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 @media (min-width: 768px) {
 
   .footer .container-article {
