--- a/less/blocks/dividers.less
+++ b/less/blocks/dividers.less
@@ -3,3 +3,11 @@
   overflow: hidden;
   background-color: #e0e0e0;
 }
+
+.divider-main--card {
+  margin-bottom: 20px;
+}
+
+.divider-main--about {
+  margin-top: 20px;
+}
