--- a/less/blocks/tehnology-review.less
+++ b/less/blocks/tehnology-review.less
@@ -16,7 +16,7 @@
 
 .tehnology-review__content {
   margin-bottom: 20px;
-  text-indent: 10px;
+  /* text-indent: 10px; */
   text-align: justify;
   font-size: 18px;
 }
