--- a/less/variables.less
+++ b/less/variables.less
@@ -3,5 +3,8 @@
 @style-color-lighten: lighten(@style-color, 10%);
 
 @bg-color-aqua: #e9f7f8;
-/* @bg-color-cerrot
-@bg-color-aqua-light */
+@bg-color-aqua-light: #f5fdf1;
+@bg-color-cyan-light: #e9f7f8;
+@bg-color-carrots: #fff1de;
+@bg-color-pink: #fce7e3;
+@bg-color-pink-light: #fceffc;
