--- a/less/blocks/advantages.less
+++ b/less/blocks/advantages.less
@@ -1,3 +1,47 @@
 .advantages {
-    
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.advantages .container-article {
+  width: 85%;
+
+  padding: 20px;
+
+  border-radius: 2px;
+  box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+
+  background-color: @bg-color-aqua-light;
+}
+
+.nav-tabs {
+  border-color: @style-color;
+}
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+  border-color: @style-color;
+  border-bottom-color: transparent;
+
+  color: @style-color;
+}
+
+.nav-tabs > li > a {
+  color: #666;
+
+  &:active {
+    color: @style-color;
+  }
+}
+
+.advantages__delivery-content {
+
+}
+
+@media (min-width: 768px) {
+
+  .advantages .container-article {
+    width: 70%;
+  }
 }
