--- a/less/blocks/card.less
+++ b/less/blocks/card.less
@@ -7,8 +7,9 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  transition: box-shadow .25s;
   border-radius: 2px;
+
+  box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
 }
 
 .card-title {
@@ -57,4 +58,16 @@
   &:active {
     background-color: #ccc;
   }
+}
+
+.card blockquote {
+  margin-bottom: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  outline: 1px solid @style-color;
+
+  border-color: @style-color;
+  background-color: #f0f8ff;
+  font-weight: bold;
 }
