--- a/less/blocks/single-product.less
+++ b/less/blocks/single-product.less
@@ -4,55 +4,67 @@
 
 .single-product .container-article {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-
-  height: 90vh;
-  max-height: 1000px;
+  justify-content: space-around;
 
   background-color: @bg-color-aqua;
+}
 
-  box-sizing: content-box;
+.single-product__content-block {
+
 }
 
 .single-product__title {
-  width: 100%;
+  text-align: center;
+}
+.single-product__sub-title {
   margin-bottom: 20px;
 
-  font-size: 40px;
+  font-size: 50px;
   text-align: center;
 }
 
 .single-product__content {
-  width: 100%;
+  padding-right: 10px;
+  padding-left: 10px;
   text-align: center;
 }
 
+.single-product__img-block {
+
+}
+
 .single-product__img {
-  width: 100%;
-  height: 40%;
-  background-image: url("../../img/small-aquel-1000.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain;
+
+}
+
+.single-product__button-wrapper {
+  text-align: center;
 }
 
 @media (min-width: 768px) {
 
-  .single-product__img {
-    width: 50%;
-    height: 50%;
+  .single-product .container-article {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 
-  .single-product__img img {
-
+  .single-product__content-block {
+    width: 45%;
   }
-}
 
-@media (min-width: 1100px) {
+  .single-product__img-block {
+    width: 45%;
+    height: auto;
+  }
 
-  .single-product__img img {
+  .single-product__button-wrapper {
+    width: 100%;
+  }
 
+  .single-product__sub-title {
+    font-size: 60px;
   }
 }
