--- a/less/blocks/welcome-to-shop.less
+++ b/less/blocks/welcome-to-shop.less
@@ -10,11 +10,12 @@
   margin-top: 20px;
   margin-bottom: 20px;
 
-  background-color: #f5fdf1;
+  background-color: @bg-color-aqua-light;
 }
 
 .welcome-to-shop__title {
   font-size: 40px;
+  text-align: center;
 }
 
 .welcome-to-shop__subtitle {
