--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,4 @@
+@import "blocks/about.less";
 @import "blocks/advantages.less";
 @import "blocks/advice.less";
 @import "blocks/animation.less";
@@ -22,6 +23,7 @@
 @import "blocks/shop-showcase.less";
 @import "blocks/showcase.less";
 @import "blocks/single-product.less";
+@import "blocks/tab-pane.less";
 @import "blocks/tehnology-review.less";
 @import "blocks/welcome-to-shop.less";
 @import "variables.less";
