--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -6,7 +6,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
 
-  background-color: #f0f0f0;
+  background-color: @bg-color-grey;
   text-align: center;
 }
 
@@ -43,7 +43,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
 
-  background-color: #f5f5f5;
+  background-color: @bg-color-grey;
   text-align: center;
 }
 
@@ -76,7 +76,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
 
-  background-color: #f5f5f5;
+  background-color: @bg-color-grey;
   text-align: center;
 }
 
