--- a/less/blocks/infobar.less
+++ b/less/blocks/infobar.less
@@ -18,7 +18,7 @@
   padding: 20px;
 
   font-size: 16px;
-  background-color: #f5f5f5;
+  background-color: @bg-color-cyan-light;
 
   transition: all 0.5s;
 
@@ -30,6 +30,10 @@
                 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     transition: all 0.5s;
   }
+}
+
+.infobar__list-item:first-child {
+
 }
 
 .infobar__list-item:last-child {
