--- a/less/style.less
+++ b/less/style.less
@@ -8,6 +8,7 @@
 @import "blocks/button.less";
 @import "blocks/call-to-action.less";
 @import "blocks/card.less";
+@import "blocks/certificate-of-quality.less";
 @import "blocks/container.less";
 @import "blocks/content-navigation.less";
 @import "blocks/dividers.less";
@@ -19,6 +20,8 @@
 @import "blocks/introduction.less";
 @import "blocks/main.less";
 @import "blocks/nav.less";
+@import "blocks/payment-and-shipping.less";
+@import "blocks/privacy-police.less";
 @import "blocks/promo-video.less";
 @import "blocks/shop-showcase.less";
 @import "blocks/showcase.less";
