--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -38,7 +38,7 @@
 
 .introduction--tehnology .introduction__aquel-title {
   display: block;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 }
 
 .reading-time {
@@ -54,10 +54,52 @@
   fill: @style-color;
 }
 
+.introduction--payment-and-shipping {
+  height: 50vh;
+  text-align: center;
+}
+
+.introduction--payment-and-shipping .introduction__title {
+  margin-bottom: 20px;
+}
+
+
+.introduction--payment-and-shipping .introduction__aquel-title svg {
+  margin-top: 10px;
+  fill: @style-color;
+}
+
+.introduction__content .introduction__content--payment-and-shipping {
+  text-align: center;
+}
+
+.introduction--privacy-police {
+  height: 50vh;
+  text-align: center;
+}
+
+.introduction--privacy-police .introduction__title {
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.introduction--privacy-police .introduction__aquel-title svg {
+  fill: @style-color;
+}
+
+.introduction__content--privacy-police {
+
+}
+
+
 @media (min-width: 768px) {
 
   .introduction--about-us .introduction__aquel-title svg {
     width: 120px;
     height: auto;
+  }
+
+  .introduction--privacy-police .introduction__title {
+    font-size: 40px;
   }
 }
