--- a/less/blocks/tehnology-review.less
+++ b/less/blocks/tehnology-review.less
@@ -6,6 +6,30 @@
   width: 85%;
 }
 
+.tehnology-review-card {
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 20px;
+
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+
+  border-radius: 2px;
+  background-color: @bg-color-carrots;
+
+  box-sizing: border-box;
+
+  transition: all 0.5s;
+
+  &:hover {
+    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    transition: all 0.5s;
+  }
+}
+
 .tehnology-review__title {
 
 }
