--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -91,6 +91,23 @@
 
 }
 
+.introduction--warranty-and-service {
+  height: 50vh;
+  text-align: center;
+}
+
+.introduction--warranty-and-service .introduction__title {
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.introduction__content--warranty-and-service {
+
+}
+
+.introduction--warranty-and-service .introduction__aquel-title svg {
+  fill: @style-color;
+}
 
 @media (min-width: 768px) {
 
