--- a/less/style.less
+++ b/less/style.less
@@ -28,5 +28,6 @@
 @import "blocks/single-product.less";
 @import "blocks/tab-pane.less";
 @import "blocks/tehnology-review.less";
+@import "blocks/warranty-and-service.less";
 @import "blocks/welcome-to-shop.less";
 @import "variables.less";
