--- a/less/blocks/card.less
+++ b/less/blocks/card.less
@@ -1,62 +1,125 @@
+.card-block .divider-main--card {
+  margin: 0 auto;
+  width: 70%;
+}
+
+.card-block__title {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.card-block .container-article {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  width: 90%;
+}
+
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
   margin-bottom: 10px;
 
+  padding-bottom: 20px;
   padding-left: 20px;
   padding-right: 20px;
 
   border-radius: 2px;
 
-  box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+  transition: all 0.5s;
+
+  background-color: @bg-color-carrots;
+
+  &:hover {
+    transition: all 0.5s;
+    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+  }
 }
 
-.card-title {
+.card img {
+  transition: all 1s;
+}
+
+.card:hover img {
+  transform: scale(1.08);
+  transition: all 1s;
+}
+
+.card__title {
   font-size: 24px;
   font-weight: 300;
+
+  text-align: center;
 }
 
-.card-image {
+.card__content {
+  margin-bottom: 20px;
+  border-radius: 0 0 2px 2px;
+
+  text-align: center;
+}
+
+.card__image {
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
-.card-image img {
+.card__image img {
   display: block;
   margin-bottom: 20px;
   border-radius: 2px 2px 0 0;
   width: 100%;
 }
 
-.card-content {
+.card__action {
   margin-bottom: 20px;
-  border-radius: 0 0 2px 2px;
+  text-align: center;
 }
 
-.card-action {
-  margin-bottom: 20px;
-}
-
-.card-action a {
+.card__action a {
   padding-top: 15px;
   padding-right: 25px;
   padding-bottom: 15px;
   padding-left: 25px;
 
-  border: 1px solid;
-  border-radius: 24px;
+  width: 200px;
 
-  color: #77cde3;
-  text-decoration: none;
+  background-color: transparent;
+  color: @style-color;
+  border: 1px solid;
+  border-color: @style-color;
+  border-radius: 15px;
+  transition: all 0.8s;
+
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+              0 2px 10px 0 rgba(0, 0, 0, 0.12);
 
   &:hover {
     color: #fff;
-    background-color: #77cde3;
+    background-color: @style-color;
+    border-color: @style-color;
+    transition: all 0.8s;
+  }
+
+  &:focus {
+    color: #fff;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 
   &:active {
-    background-color: #ccc;
+    color: #fff !important;
+    background-color: @style-color;
+    border-color: @style-color;
+  }
+
+  &:active:hover {
+    color: #fff !important;
+    background-color: @style-color;
+    border-color: @style-color;
   }
 }
 
@@ -70,4 +133,15 @@
   border-color: @style-color;
   background-color: #f0f8ff;
   font-weight: bold;
+}
+
+@media (min-width: 900px) {
+
+  .card-block .container-article {
+    width: 85%;
+  }
+
+  .card {
+    width: 30%;
+  }
 }
