--- a/less/blocks/single-product.less
+++ b/less/blocks/single-product.less
@@ -39,6 +39,31 @@
 
 }
 
+.single-product__pre-order-content {
+  margin-bottom: 20px;
+}
+
+.single-product__form-pre-order input {
+  height: 45px;
+
+  margin-bottom: 15px;
+  padding: 0;
+  padding-left: 10px;
+
+  border: none;
+  border-radius: 0;
+  border-bottom: 3px solid #77cde3;
+  background-color: transparent;
+
+  box-shadow: none;
+
+  &:focus {
+    outline: none;
+    box-shadow: none;
+    border-color: #66afe9;
+  }
+}
+
 .single-product__button-wrapper {
   text-align: center;
 }
@@ -66,5 +91,9 @@
 
   .single-product__sub-title {
     font-size: 60px;
+  }
+
+  .single-product__form-pre-order input {
+    margin-right: 20px;
   }
 }
