--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -41,6 +41,10 @@
   margin-bottom: 30px;
 }
 
+.introduction__reading-time {
+  margin-bottom: 20px;
+}
+
 .reading-time {
   color: #999;
 }
@@ -107,6 +111,42 @@
 
 .introduction--warranty-and-service .introduction__aquel-title svg {
   fill: @style-color;
+}
+
+.introduction--blog {
+  height: 50vh;
+}
+
+.introduction--blog .introduction__title {
+  margin-bottom: 20px;
+}
+
+.introduction__content .introduction__content--blog {
+
+}
+
+.introduction--blog .introduction__aquel-title svg {
+  margin-bottom: 20px;
+  fill: @style-color;
+}
+
+.introduction--blog-single {
+  height: auto;
+
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.introduction--blog-single .introduction__title {
+  margin-bottom: 30px;
+}
+
+.introduction__content--blog-single {
+
+}
+
+.introduction--blog-single .introduction__aquel-title {
+
 }
 
 @media (min-width: 768px) {
