--- a/less/style.less
+++ b/less/style.less
@@ -2,7 +2,7 @@
 @import "blocks/advantages.less";
 @import "blocks/advice.less";
 @import "blocks/animation.less";
-@import "blocks/blog-preview.less";
+@import "blocks/blog.less";
 @import "blocks/body.less";
 @import "blocks/brand-logo.less";
 @import "blocks/button.less";
